# CompileTimeGameOfLife

./: CMakeLists.txt  GameOfLife.cpp  README.md
GameOfLife/: CommonStateLogic.h  Constants.h  Printer.h  RecursiveStateProcessor.h  State.h
